samples/_failures_safe/1761178790_b98411_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d208c98.c: In function ‘main’:
./samples/SAFE/__tmp_7d208c98.c:161:17: error: expected ‘;’ at end of input
  161 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_7d208c98.c:161:9: error: expected declaration or statement at end of input
  161 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_7d208c98.c:161:9: error: expected declaration or statement at end of input
